[package]
name        = "temenos-identity"
description = "Identity management for Temenos"
version     = "0.1.0"
authors     = [ "pcummuskey <peterc@aetheric.co.nz>" ]
build       = "build.rs"
publish     = false
readme      = "README.md"

documentation = "https://aetheric.co.nz/temenos"
homepage      = "https://aetheric.co.nz/temenos"
repository    = "https://github.com/aetheric/temenos"

[badges]
travis-ci = { repository = "aetheric/temenos", branch = "identity" }
coveralls = { repository = "aetheric/temenos", branch = "identity", service = "github" }

[[bin]]
name = "temenos-identity"
path = "src/main.rs"

[build-dependencies]
kafka       = "*"
openssl     = "*"
protoc-rust = "*"

[dependencies]
protoc = "*"
